chore(refactor): address some spotbugs warnings